--- a/site/Pages/Post.razor
+++ b/site/Pages/Post.razor
@@ -1,5 +1,5 @@
 ﻿@inject HttpClient Http
-@inject IJSRuntime JSRuntime
+@inject IJSRuntime JsRuntime
 @page "/post/{Id}"
 @using Markdig
 
@@ -13,30 +13,27 @@
     {
         var markdown  = await Http.GetStringAsync($"https://raw.githubusercontent.com/adam-drewery/blog/main/content/{Id}.md")
                         ?? throw new InvalidOperationException("Failed to get blog content");
-
+        
         _content = Markdown.ToHtml(markdown);
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        await JSRuntime.InvokeVoidAsync("highlightCode");
+        await JsRuntime.InvokeVoidAsync("fitImages");
+        await JsRuntime.InvokeVoidAsync("highlightCode");
+        await JsRuntime.InvokeVoidAsync("loadUtterances");
     }
-
 }
 
 <div class="page-wrapper">
-<section class="pb-5">
-    <div class="container">
-        <div class="row pt-5">
-            <div class="col-xl-8">
-
-                @if (_content != null)
-                {
-                    @((MarkupString)_content)
-                }
+    <section class="pb-5">
+        <div class="container">
+            <div class="row pt-5">
+                <div class="col-xl-8">
+                    @if (_content != null) { @((MarkupString)_content) }
+                </div>
+                <div id="comments" class="col-xl-8"></div>
             </div>
         </div>
-
-    </div>
-</section>
+    </section>
 </div>
