--- a/site/Pages/Tag.razor
+++ b/site/Pages/Tag.razor
@@ -26,19 +26,14 @@
             </div>
         </div>
     </section>
-
     <section class="mt-3 pb-3">
         <div class="container">
             <div class="row">
-                <!-- Content-->
                 <div class="col-xl-8">
-
                     @{ var posts = SiteContext.Posts.Where(p => p.Tags.Contains(Name)); }
                     @foreach (var post in posts)
                     {
-                        <!-- Post-->
                         <article class="post">
-
                             <div class="post-header">
                                 <h2 class="post-title">
                                     <a href="/post/@post.Id">@post.Title</a>
@@ -47,7 +42,6 @@
                                     <li>
                                         <i class="mdi mdi-calendar"></i> @post.Date
                                     </li>
-
                                     @{ var delimiter = ""; }
                                     @foreach (var tag in post.Tags)
                                     {
@@ -56,72 +50,24 @@
                                         </li>
                                         delimiter = ", ";
                                     }
-
                                     <li>
                                         <i class="mdi mdi-comment-multiple-outline"></i> <a href="/#">0 Comments</a>
                                     </li>
                                 </ul>
                             </div>
-
                             <div class="post-preview">
                                 <a href="/#">
                                     <img src="/images/blog/blog-1.jpg" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
-
                             <div class="post-content">
                                 <p>Whether an identity or campaign, we make your brand visible, relevant and effective by placing the digital at the center of its ecosystem, without underestimating the power of traditional media. Whether an identity or campaign, we make your brand visible.</p>
                             </div>
-
                         </article>
-                        <!-- Post end-->
                     }
-
-                    <!-- Pagination-->
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <ul class="pagination">
-                                <li class="next">
-                                    <a href="/#">
-                                        <i class="mdi mdi-chevron-left"></i>
-                                    </a>
-                                </li>
-                                <li class="active">
-                                    <a href="/#">1</a>
-                                </li>
-                                <li>
-                                    <a href="/#">2</a>
-                                </li>
-                                <li>
-                                    <a href="/#">3</a>
-                                </li>
-                                <li>
-                                    <a href="/#">4</a>
-                                </li>
-                                <li>
-                                    <a href="/#">5</a>
-                                </li>
-                                <li class="prev">
-                                    <a href="/#">
-                                        <i class="mdi mdi-chevron-right"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- Pagination end-->
+                    <Pagination />
                 </div>
-                <!-- Content end-->
-
-                @* <!-- Sidebar--> *@
-                @* <div class="col-xl-4"> *@
-                @*     <div class="sidebar"> *@
-                @*         <Sidebar /> *@
-                @*     </div> *@
-                @* </div> *@
-                @* <!-- Sidebar end--> *@
             </div>
         </div>
-        <!-- end container -->
     </section>
 </div>
