--- a/site/Shared/MainLayout.razor
+++ b/site/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 <div class="topbar-mobile">
     <div class="logo">
         <a href="/">
-            <img src="images/logo.png" alt="" class="" style="height: 44px;">
+            <img src="images/me.jpg" alt="" class="" style="height: 44px;">
         </a>
         <button class="button-menu-mobile">
             <i class="mdi mdi-menu"></i>
