rename jobs etc

--- a/site/Shared/NavMenu.razor
+++ b/site/Shared/NavMenu.razor
@@ -92,11 +92,11 @@
                         <i class="mdi mdi-linkedin"></i>
                     </a>
                 </li>
-                @* <li> *@
-                @*     <a href="data:application/xml;charset=utf-8,@rssFeed" download="rss.xml"> *@
-                @*         <i class="mdi mdi-rss"></i> *@
-                @*     </a> *@
-                @* </li> *@
+                <li>
+                    <a href="https://raw.githubusercontent.com/adam-drewery/blog/main/rss.xml" download="rss.xml">
+                        <i class="mdi mdi-rss"></i>
+                    </a>
+                </li>
             </ul>
 
         </aside>
