--- a/site/Pages/Tag.razor
+++ b/site/Pages/Tag.razor
@@ -10,6 +10,10 @@
 <div class="page-wrapper">
     <section>
         <div class="container">
+            <a href="/" class="btn btn-outline-custom">
+                            <i class="mdi mdi-step-backward"></i>
+                            Go back
+                        </a>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="page-title">
@@ -21,7 +25,6 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/">Go back</a>
                 </div>
             </div>
         </div>
