--- a/site/Shared/NavMenu.razor
+++ b/site/Shared/NavMenu.razor
@@ -3,116 +3,26 @@
 @using System.Xml
 @using Microsoft.AspNetCore.Components.WebAssembly.Hosting
 @inject SiteContext SiteContext
-@inject IJSRuntime JSRuntime
+@inject IJSRuntime JsRuntime
 @inject IWebAssemblyHostEnvironment HostEnvironment
 
-@code{
+@code {
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        await JSRuntime.InvokeVoidAsync("setupPhoto");
-        await JSRuntime.InvokeVoidAsync("initializeMenu");
+        await JsRuntime.InvokeVoidAsync("setupPhoto");
+        await JsRuntime.InvokeVoidAsync("initializeMenu");
     }
 }
 
 <div class="slimscroll-menu" id="remove-scroll">
     <div id="sidebar-menu" style="padding: 1em">
-
-        <aside class="widget about-widget">
-            @* <div class="widget-title">Adam Drewery</div> *@
-
-            <div class="text-center">
-                <img id="photo" src="images/me.jpg" alt="About Me" class="rounded-circle">
-
-                <p>Hello fellow traveller. Its, me, Adam! I'm a programmer, music lover, and slayer of dangerous goblinoids. </p>
-            </div>
-
-        </aside>
-
-        <!-- Search widget-->
-        <aside class="widget widget_search">
-            <form action="/search">
-                <input name="q" class="form-control pr-5" style="background-color: #333; color: #eee" type="search" placeholder="Search...">
-                <button class="search-button" type="submit">
-                    <span class="mdi mdi-magnify"></span>
-                </button>
-            </form>
-        </aside>
-
-        <!-- Tags widget-->
-        <aside class="widget widget_tag_cloud">
-            <div class="widget-title">Tags</div>
-            <div class="tagcloud">
-
-                @{ var tags = SiteContext.Posts.SelectMany(p => p.Tags).Distinct(); }
-                @foreach (var tag in tags)
-                {
-                    <a href="/tag/@tag">@tag</a>
-                }
-
-            </div>
-        </aside>
-
-        <!-- Recent entries widget-->
-        <aside class="widget widget_recent_entries_custom">
-            <div class="widget-title">Recent Posts</div>
-            <ul>
-
-                @foreach (var post in SiteContext.Posts.Take(3))
-                {
-                    <li class="clearfix">
-                        <div class="wi">
-                            <a href="/@post.Id">
-                                <img src="images/works/img1.jpg" alt="" class="img-fluid">
-                            </a>
-                        </div>
-                        <div class="wb">
-                            <a href="/post/@post.Id">@post.Title</a> <span class="post-date">@post.Date</span>
-                        </div>
-                    </li>
-                }
-            </ul>
-        </aside>
-
-        <aside class="widget about-widget">
-            <div class="widget-title">Elsewhere</div>
-
-            <ul class="socials">
-                <li>
-                    <a href="@SiteContext.GitHub">
-                        <i class="mdi mdi-github-circle"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="@SiteContext.StackOverflow">
-                        <i class="mdi mdi-stackoverflow"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="@SiteContext.LinkedIn">
-                        <i class="mdi mdi-linkedin"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://raw.githubusercontent.com/adam-drewery/blog/main/rss.xml" download="rss.xml">
-                        <i class="mdi mdi-rss"></i>
-                    </a>
-                </li>
-            </ul>
-
-        </aside>
-
-        <!-- Archives widget-->
-        <aside class="widget">
-            <div class="widget-title">Archives</div>
-
-            <ul>
-                @foreach (var post in SiteContext.Posts)
-                {
-                    <li><a href="/post/@post.Id">@post.Title</a> (@post.Date)</li>
-                }
-            </ul>
-
-        </aside>
-
+        <AboutMe />
+        <Search />
+        <TagCloud />
+        <RecentEntries />
+        <MailChimp />
+        <Socials />
+        <Archives />
     </div>
 </div>
