Remove old stuff and fix comments bug

--- a/site/Shared/NavMenu.razor
+++ b/site/Shared/NavMenu.razor
@@ -20,9 +20,9 @@
         <AboutMe />
         <Search />
         <TagCloud />
-        <RecentEntries />
-        <MailChimp />
+        @* <RecentEntries /> *@
         <Socials />
+        <MailChimp />
         <Archives />
     </div>
 </div>
