--- a/site/Shared/MailChimp.razor
+++ b/site/Shared/MailChimp.razor
@@ -2,7 +2,7 @@
     <form action="https://drewery.us10.list-manage.com/subscribe/post?u=e3d380dc1f9e57098878d47f7&amp;id=68344bd348&amp;f_id=00a3dbe5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
         <div id="mc_embed_signup_scroll" class="widget-title">Get Email Updates</div>
         <div>
-            <input type="email" name="EMAIL" class="required email form-control pr-5" id="mce-EMAIL" required="" value="" style="background-color: #333; color: #eee">
+            <input type="email" name="EMAIL" class="required email form-control pr-5" id="mce-EMAIL" required="" value="", placeholder="Enter email address..." style="background-color: #333; color: #eee">
             <div id="mce-responses" class="clear foot">
                 <div class="response" id="mce-error-response" style="display: none;"></div>
                 <div class="response" id="mce-success-response" style="display: none;"></div>
