orange you glad i changed the colour scheme

--- a/site/wwwroot/css/default.css
+++ b/site/wwwroot/css/default.css
@@ -1,22 +1,22 @@
 .widget-title:after {
-    border-bottom: 1px solid #0db3e3;
+    border-bottom: 1px solid #ec7600;
 }
 
 .quote-post .blockquote {
-    border: 2px solid #0db3e3;
+    border: 2px solid #ec7600;
 }
 
 .quote-post .blockquote:before,.related-post .post-header a:hover,.media-heading a:hover,.widget ul li a:hover,
 .widget ol li a:hover,.search-button:hover,.post-meta a:hover,.post-meta a:focus,.post-title a:hover,.btn-outline-custom{
-    color: #0db3e3;
+    color: #ec7600;
 }
 
 .link-post,.post-author-box .socials li a:hover,.tagcloud > a:hover,.post-tags a:hover,.post-tags a:focus,.btn-outline-custom.active,
 .btn-outline-custom:hover,.btn-outline-custom:active,.show>.btn-outline-custom.dropdown-toggle{
-    background-color: #0db3e3;
+    background-color: #ec7600;
 }
 
 .widget select:focus,.post-author-box .socials li a:hover,.btn-outline-custom.active,.btn-outline-custom:hover,
 .btn-outline-custom:active,.show>.btn-outline-custom.dropdown-toggle,.btn-outline-custom{
-    border-color: #0db3e3;
+    border-color: #ec7600;
 }
