--- a/site/Pages/Post.razor
+++ b/site/Pages/Post.razor
@@ -33,6 +33,10 @@
             <a href="/" class="btn btn-outline-custom">
                 <i class="mdi mdi-step-backward"></i>
                 Go back
+                @{ var sourceUrl = $"https://github.com/adam-drewery/blog/blob/main/content/{Id}.md"; }
+            </a><a href="@sourceUrl" class="btn btn-outline-custom" style="margin-left: 20px">
+                <i class="mdi mdi-github-box"></i>
+                View Source
             </a>
             <div class="row pt-5">
                 <div class="col-xl-8">
