fix some paths, formatting etc. also simplified posts url.

--- a/site/Pages/Index.razor
+++ b/site/Pages/Index.razor
@@ -29,31 +29,31 @@
                         <article class="post">
                             <div class="post-header">
                                 <h2 class="post-title">
-                                    <a href="/post/@post.Id">@post.Title</a>
+                                    <a href="/@post.Id">@post.Title</a>
                                 </h2>
                                 <ul class="post-meta">
                                     <li>
                                         <i class="mdi mdi-calendar"></i> @post.Date
                                     </li>
                                     @{ var delimiter = ""; }
+                                    <li>
+                                        <i class="mdi mdi-tag-text-outline"></i>    
                                     @foreach (var tag in post.Tags)
                                     {
-                                        <li>
-                                            <i class="mdi mdi-tag-text-outline"></i>
-                                            <a href="/tag/@tag">@tag@delimiter</a>
-                                        </li>
+                                        <a href="/tag/@tag">@delimiter @tag</a>
                                         delimiter = ", ";
                                     }
+                                    </li>
                                     <li>
                                         <i class="mdi mdi-comment-multiple-outline"></i>
                                         @{ var commentLabel = post.CommentCount == 1 ? "comment" : "comments"; }
-                                        <a href="/post/@post.Id">@post.CommentCount @commentLabel</a>
+                                        <a href="/@post.Id">@post.CommentCount @commentLabel</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="post-preview">
-                                <a href="/#">
-                                    <img src="@(Path.Combine(SiteContext.BaseContentAddress, post.Image))" alt="" class="img-fluid rounded">
+                                <a href="/@post.Id">
+                                    <img src="@(Path.Combine(SiteContext.BaseContentAddress, post.Id, post.Image))" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
                             <div class="post-content">
