--- a/site/Pages/Post.razor
+++ b/site/Pages/Post.razor
@@ -1,7 +1,7 @@
 ﻿@inject HttpClient Http
 @inject SiteContext SiteContext
 @inject IJSRuntime JsRuntime
-@page "/post/{Id}"
+@page "/{Id}"
 @using Markdig
 
 @code {
