--- a/site/Shared/Archives.razor
+++ b/site/Shared/Archives.razor
@@ -9,10 +9,10 @@
             <li>
 
                 <div>
-                    <a href="/post/@post.Id">@post.Title</a>
+                    <a href="/@post.Id">@post.Title</a>
                 </div>
                 <div>
-                    <a style="font-size: x-small" href="/post/@post.Id">@post.Date</a>
+                    <a style="font-size: x-small" href="/@post.Id">@post.Date</a>
                 </div>
             </li>
         }
