--- a/site/Shared/RecentEntries.razor
+++ b/site/Shared/RecentEntries.razor
@@ -12,7 +12,7 @@
                     </a>
                 </div>
                 <div class="wb">
-                    <a href="/post/@post.Id">@post.Title</a> <span class="post-date">@post.Date</span>
+                    <a href="/@post.Id">@post.Title</a> <span class="post-date">@post.Date</span>
                 </div>
             </li>
         }
