--- a/site/Pages/Tag.razor
+++ b/site/Pages/Tag.razor
@@ -39,7 +39,7 @@
                         <article class="post">
                             <div class="post-header">
                                 <h2 class="post-title">
-                                    <a href="/post/@post.Id">@post.Title</a>
+                                    <a href="/@post.Id">@post.Title</a>
                                 </h2>
                                 <ul class="post-meta">
                                     <li>
