more formatting, also guard against github rate limit problems

--- a/site/Shared/Archives.razor
+++ b/site/Shared/Archives.razor
@@ -9,10 +9,11 @@
             <li>
 
                 <div>
-                    <a href="/@post.Id">@post.Title</a>
-                </div>
-                <div>
-                    <a style="font-size: x-small" href="/@post.Id">@post.Date</a>
+                <a href="/@post.Id">@post.Title
+                
+                    <div  style="font-size: x-small" href="/@post.Id">@post.Date
+                    </div>
+                </a>
                 </div>
             </li>
         }
