--- a/site/Shared/PostTitle.razor
+++ b/site/Shared/PostTitle.razor
@@ -1,41 +1,44 @@
 ﻿@inject SiteContext SiteContext
+
 @code {
 
-    [Parameter] 
+    [Parameter]
     public PostDetails Post { get; set; }
 
 }
+
 <article class="post">
-                            <div class="post-header">
-                                <h2 class="post-title">
-                                    <a href="/@Post.Id">@Post.Title</a>
-                                </h2>
-                                <ul class="post-meta">
-                                    <li>
-                                        <i class="mdi mdi-calendar"></i> @Post.Date
-                                    </li>
-                                    @{ var delimiter = ""; }
-                                    <li>
-                                        <i class="mdi mdi-tag-text-outline"></i>    
-                                    @foreach (var tag in Post.Tags)
-                                    {
-                                        @delimiter <a href="/tag/@tag">@tag</a>
-                                        delimiter = ", ";
-                                    }
-                                    </li>
-                                    <li>
-                                        <i class="mdi mdi-comment-multiple-outline"></i>
-                                        @{ var commentLabel = Post.CommentCount == 1 ? "comment" : "comments"; }
-                                        <a href="/@Post.Id">@Post.CommentCount @commentLabel</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="post-preview">
-                                <a href="/@Post.Id">
-                                    <img src="@(Path.Combine(SiteContext.BaseContentAddress, Post.Id, Post.Image))" alt="" class="img-fluid rounded">
-                                </a>
-                            </div>
-                            <div class="post-content">
-                                <p>@Post.Description</p>
-                            </div>
-                        </article>
+    <div class="post-header">
+        <h2 class="post-title">
+            <a href="/@Post.Id">@Post.Title</a>
+        </h2>
+        <ul class="post-meta">
+            <li>
+                <i class="mdi mdi-calendar"></i> @Post.Date
+            </li>
+            @{ var delimiter = ""; }
+            <li>
+                <i class="mdi mdi-tag-text-outline"></i>
+                @foreach (var tag in Post.Tags)
+                {
+                    @delimiter
+                    <a href="/tag/@tag">@tag</a>
+                    delimiter = ", ";
+                }
+            </li>
+            <li>
+                <i class="mdi mdi-comment-multiple-outline"></i>
+                @{ var commentLabel = Post.CommentCount == 1 ? "comment" : "comments"; }
+                <a href="/@Post.Id">@Post.CommentCount @commentLabel</a>
+            </li>
+        </ul>
+    </div>
+    <div class="post-preview">
+        <a href="/@Post.Id">
+            <img src="@(Path.Combine(SiteContext.BaseContentAddress, Post.Id, Post.Image))" alt="" class="img-fluid rounded">
+        </a>
+    </div>
+    <div class="post-content">
+        <p>@Post.Description</p>
+    </div>
+</article>
